fix(docs-infra): fix aio search-results issue with toolbar and notification (#45579) (#45654)
use border-top-width instead of padding-top as the strategy for moving
the search-results panel down, this fixes the issue of the panel going
behind the toolbar (which causes either overlapping text in the home
page or the results scrollbar to be hidden behind the toolbar in other
pages)

PR Close #45579

PR Close #45654

--- a/aio/src/styles/2-modules/notification/_notification.scss
+++ b/aio/src/styles/2-modules/notification/_notification.scss
@@ -82,7 +82,7 @@ aio-notification {
   }
 
   .search-results {
-    padding-top: $notificationHeight;
+    border-top-width: 68px + $notificationHeight;
   }
 
   mat-sidenav-container.sidenav-container {
